checkbox alignment issues

--- a/stylesheets/base/global.less
+++ b/stylesheets/base/global.less
@@ -897,7 +897,7 @@ select::-ms-expand {
 .checkbox-outer-label {
   display: block;
   position: relative;
-  padding-left: 34px;
+  padding-left: 30px;
   cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
@@ -921,8 +921,8 @@ select::-ms-expand {
   position: absolute; 
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 19px;
+  width: 19px;
   background-color: #fff;
   border: 1px solid #000; 
   border-radius: 4px;
@@ -952,8 +952,8 @@ select::-ms-expand {
 .checkbox-outer-label .checkmark-style:after {
   left: 6px;
   top: 2px; 
-  width: 10px;
-  height: 15px;
+  width: 5px;
+  height: 10px;
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
