--- a/stylesheets/pages/product.less
+++ b/stylesheets/pages/product.less
@@ -404,6 +404,7 @@
                                         vertical-align: middle;
                                         border-right: 1px solid #004e99;
                                         display: inline-block;
+                                        padding-left: 34px;
                                         .subscribe-input{
                                             left: 0;
                                             width: 20px;
@@ -413,6 +414,12 @@
                                         .checkmark-style{
                                             border-radius: 2px;
                                             border: 1px solid #004e99;
+                                            width: 25px;
+                                            height: 25px;
+                                            &:after{
+                                                width: 10px;
+                                                height: 15px;
+                                            }
                                         }
                                         .label-input{
                                             font-size: 18px;
